[gd_scene load_steps=44 format=3 uid="uid://b18nigm5wn5ab"]

[ext_resource type="Script" path="res://Scripts/MainScenes/Game_ViewPort/HUD.gd" id="1_60mgy"]
[ext_resource type="FontFile" uid="uid://df4il2aive3ok" path="res://Assets/Fonts/Zeus-Land.otf" id="2_owy1r"]
[ext_resource type="Texture2D" uid="uid://bsnfphv05rlds" path="res://Assets/Images/HUD/waves/wave1.png" id="10_ghb0x"]
[ext_resource type="Texture2D" uid="uid://c8h4x6cdrpqpk" path="res://Assets/Images/HUD/waves/wave2.png" id="11_kusy4"]
[ext_resource type="Texture2D" uid="uid://bys0o6q3rv1kr" path="res://Assets/Images/HUD/waves/wave3.png" id="12_1ax7q"]
[ext_resource type="Texture2D" uid="uid://bxth4dkos64s" path="res://Assets/Images/HUD/waves/wave4.png" id="13_581s8"]
[ext_resource type="Texture2D" uid="uid://coxsmj54lptwp" path="res://Assets/Images/HUD/waves/wave5.png" id="14_6fkh8"]
[ext_resource type="Texture2D" uid="uid://ckt6j1doftmd0" path="res://Assets/Images/HUD/waves/wave6.png" id="15_edd8s"]
[ext_resource type="Texture2D" uid="uid://enhn0dupvb3s" path="res://Assets/Images/HUD/waves/wave7.png" id="16_at322"]
[ext_resource type="Texture2D" uid="uid://c4bqokigkd1xr" path="res://Assets/Images/HUD/waves/wave8.png" id="17_3cmjo"]
[ext_resource type="Texture2D" uid="uid://bfxfl80s5xqds" path="res://Assets/Images/HUD/waves/wave9.png" id="18_g0fqi"]
[ext_resource type="Texture2D" uid="uid://ctq6xiqvtaxn3" path="res://Assets/Images/HUD/waves/wave10.png" id="19_cu78b"]
[ext_resource type="Texture2D" uid="uid://b8bt7vnrbwgnq" path="res://Assets/Images/HUD/waves/wave11.png" id="20_7d1ov"]
[ext_resource type="Texture2D" uid="uid://dkdhjk3ijj8br" path="res://Assets/Images/HUD/waves/wave12.png" id="21_gi4ho"]
[ext_resource type="Texture2D" uid="uid://d1h8iml8hxpuu" path="res://Assets/Images/HUD/waves/wave13.png" id="22_dqewb"]
[ext_resource type="Texture2D" uid="uid://2krbaswfgqvr" path="res://Assets/Images/HUD/waves/wave14.png" id="23_rgjax"]
[ext_resource type="Texture2D" uid="uid://ctg762m2e8oo2" path="res://Assets/Images/HUD/waves/wave15.png" id="24_hi4v3"]
[ext_resource type="Texture2D" uid="uid://bdkh7uydrw7hp" path="res://Assets/Images/HUD/waves/wave16.png" id="25_p37ns"]
[ext_resource type="Texture2D" uid="uid://biq4y3oyype2c" path="res://Assets/Images/HUD/waves/wave17.png" id="26_v5m2a"]
[ext_resource type="Texture2D" uid="uid://2pcdgtdowi0p" path="res://Assets/Images/HUD/waves/wave18.png" id="27_50f01"]
[ext_resource type="Texture2D" uid="uid://gawpunthm68w" path="res://Assets/Images/HUD/waves/wave19.png" id="28_b4n51"]
[ext_resource type="Texture2D" uid="uid://bn3u1mqgoo5yn" path="res://Assets/Images/HUD/waves/wave20.png" id="29_3gdep"]
[ext_resource type="Texture2D" uid="uid://b30q73hel4bo6" path="res://Assets/Images/HUD/Ultimates/zeusUlt.png" id="29_35oqo"]
[ext_resource type="Texture2D" uid="uid://4xs1mdhghkr" path="res://Assets/Images/HUD/Ultimates/hadesUltHUD.png" id="30_5voq0"]
[ext_resource type="Texture2D" uid="uid://c3ce7u01og0rt" path="res://Assets/Images/HUD/Ultimates/poseidonUltHUD.png" id="31_bp4i7"]
[ext_resource type="Texture2D" uid="uid://yjcswgm42ljb" path="res://Assets/Images/HUD/SkillSelection/Divine/scene00001.png" id="32_h8ujo"]
[ext_resource type="Texture2D" uid="uid://bliuur2u7r03c" path="res://Assets/Images/HUD/SkillSelection/Divine/scene00004.png" id="33_afn4i"]
[ext_resource type="Texture2D" uid="uid://r22njvg8r0py" path="res://Assets/Images/HUD/SkillSelection/Divine/scene00007.png" id="34_53nyw"]
[ext_resource type="Texture2D" uid="uid://btikammdiikmy" path="res://Assets/Images/HUD/Ultimates/zeus&poseidonUltHUD.png" id="35_pokj2"]
[ext_resource type="Texture2D" uid="uid://b04yem0fkick8" path="res://Assets/Images/HUD/SkillSelection/attack1hudNoGod.png" id="36_78yll"]
[ext_resource type="Texture2D" uid="uid://ddnc0v2drshda" path="res://Assets/Images/HUD/Ultimates/hades&poseidonUltHUD.png" id="37_egsng"]
[ext_resource type="Texture2D" uid="uid://dc80dk8ypu453" path="res://Assets/Images/HUD/Ultimates/zeus&hadesUltHUD.png" id="38_dqj6i"]
[ext_resource type="Texture2D" uid="uid://d30hsgavaxyb5" path="res://Assets/Images/HUD/SkillSelection/dashNoGodHud.png" id="39_753by"]
[ext_resource type="Texture2D" uid="uid://bxyb1duvesmhk" path="res://Assets/Images/HUD/SkillSelection/attack2hudNoGod.png" id="39_yx88j"]
[ext_resource type="Texture2D" uid="uid://k6210wyey2t4" path="res://Assets/Images/HUD/HUD GAME3.png" id="41_jfwtf"]

[sub_resource type="LabelSettings" id="LabelSettings_22btt"]
font = ExtResource("2_owy1r")
font_size = 13

[sub_resource type="SpriteFrames" id="SpriteFrames_mfcji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_h8ujo")
}, {
"duration": 1.0,
"texture": ExtResource("33_afn4i")
}, {
"duration": 1.0,
"texture": ExtResource("34_53nyw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_0f3i7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_78yll")
}, {
"duration": 1.0,
"texture": ExtResource("29_35oqo")
}, {
"duration": 1.0,
"texture": ExtResource("31_bp4i7")
}, {
"duration": 1.0,
"texture": ExtResource("30_5voq0")
}, {
"duration": 1.0,
"texture": ExtResource("35_pokj2")
}, {
"duration": 1.0,
"texture": ExtResource("38_dqj6i")
}, {
"duration": 1.0,
"texture": ExtResource("37_egsng")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3g5ue"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_yx88j")
}, {
"duration": 1.0,
"texture": ExtResource("29_35oqo")
}, {
"duration": 1.0,
"texture": ExtResource("31_bp4i7")
}, {
"duration": 1.0,
"texture": ExtResource("30_5voq0")
}, {
"duration": 1.0,
"texture": ExtResource("35_pokj2")
}, {
"duration": 1.0,
"texture": ExtResource("38_dqj6i")
}, {
"duration": 1.0,
"texture": ExtResource("37_egsng")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_4n63o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("29_35oqo")
}, {
"duration": 1.0,
"texture": ExtResource("31_bp4i7")
}, {
"duration": 1.0,
"texture": ExtResource("30_5voq0")
}, {
"duration": 1.0,
"texture": ExtResource("35_pokj2")
}, {
"duration": 1.0,
"texture": ExtResource("38_dqj6i")
}, {
"duration": 1.0,
"texture": ExtResource("37_egsng")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ecpgq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_753by")
}, {
"duration": 1.0,
"texture": ExtResource("29_35oqo")
}, {
"duration": 1.0,
"texture": ExtResource("31_bp4i7")
}, {
"duration": 1.0,
"texture": ExtResource("30_5voq0")
}, {
"duration": 1.0,
"texture": ExtResource("35_pokj2")
}, {
"duration": 1.0,
"texture": ExtResource("38_dqj6i")
}, {
"duration": 1.0,
"texture": ExtResource("37_egsng")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_k2oq7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("29_35oqo")
}, {
"duration": 1.0,
"texture": ExtResource("31_bp4i7")
}, {
"duration": 1.0,
"texture": ExtResource("30_5voq0")
}, {
"duration": 1.0,
"texture": ExtResource("35_pokj2")
}, {
"duration": 1.0,
"texture": ExtResource("38_dqj6i")
}, {
"duration": 1.0,
"texture": ExtResource("37_egsng")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_g7qxd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ghb0x")
}, {
"duration": 1.0,
"texture": ExtResource("11_kusy4")
}, {
"duration": 1.0,
"texture": ExtResource("12_1ax7q")
}, {
"duration": 1.0,
"texture": ExtResource("13_581s8")
}, {
"duration": 1.0,
"texture": ExtResource("14_6fkh8")
}, {
"duration": 1.0,
"texture": ExtResource("15_edd8s")
}, {
"duration": 1.0,
"texture": ExtResource("16_at322")
}, {
"duration": 1.0,
"texture": ExtResource("17_3cmjo")
}, {
"duration": 1.0,
"texture": ExtResource("18_g0fqi")
}, {
"duration": 1.0,
"texture": ExtResource("19_cu78b")
}, {
"duration": 1.0,
"texture": ExtResource("20_7d1ov")
}, {
"duration": 1.0,
"texture": ExtResource("21_gi4ho")
}, {
"duration": 1.0,
"texture": ExtResource("22_dqewb")
}, {
"duration": 1.0,
"texture": ExtResource("23_rgjax")
}, {
"duration": 1.0,
"texture": ExtResource("24_hi4v3")
}, {
"duration": 1.0,
"texture": ExtResource("25_p37ns")
}, {
"duration": 1.0,
"texture": ExtResource("26_v5m2a")
}, {
"duration": 1.0,
"texture": ExtResource("27_50f01")
}, {
"duration": 1.0,
"texture": ExtResource("28_b4n51")
}, {
"duration": 1.0,
"texture": ExtResource("29_3gdep")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="HUD" type="Node2D"]
script = ExtResource("1_60mgy")

[node name="TimeLine" type="Node2D" parent="."]

[node name="Label" type="Label" parent="TimeLine"]
offset_left = 516.0
offset_top = 3.0
offset_right = 623.0
offset_bottom = 20.0
text = "Time to Next Wave"
label_settings = SubResource("LabelSettings_22btt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="TimeLine"]
offset_left = 548.0
offset_top = 103.0
offset_right = 588.0
offset_bottom = 129.0
theme_override_fonts/font = ExtResource("2_owy1r")
theme_override_font_sizes/font_size = 13
text = "30s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="TimeLine"]
offset_left = 541.0
offset_top = 22.0
offset_right = 593.0
offset_bottom = 101.0
color = Color(0.835294, 0.764706, 0.231373, 1)

[node name="Skills" type="Node2D" parent="."]
scale = Vector2(1.72, 1.72)

[node name="Selected" type="ColorRect" parent="Skills"]
offset_left = 211.046
offset_top = 555.233
offset_right = 227.046
offset_bottom = 575.233
color = Color(0.00184107, 0.00184107, 0.00184107, 1)

[node name="Label" type="Label" parent="Skills/Selected"]
layout_mode = 0
offset_left = 3.48837
offset_top = 1.74417
offset_right = 43.4884
offset_bottom = 27.7442
theme_override_fonts/font = ExtResource("2_owy1r")
theme_override_font_sizes/font_size = 18
text = "0"

[node name="Attack1" type="Node2D" parent="Skills"]
position = Vector2(256.395, 564.535)

[node name="Border" type="ColorRect" parent="Skills/Attack1"]
offset_left = -14.0
offset_top = -17.5
offset_right = 14.0
offset_bottom = 17.5

[node name="Divine" type="AnimatedSprite2D" parent="Skills/Attack1"]
position = Vector2(0.581299, -0.58131)
scale = Vector2(0.128875, 0.0894454)
sprite_frames = SubResource("SpriteFrames_mfcji")
autoplay = "default"
frame_progress = 0.51503

[node name="Attack1" type="AnimatedSprite2D" parent="Skills/Attack1"]
scale = Vector2(0.0244695, 0.040404)
sprite_frames = SubResource("SpriteFrames_0f3i7")
frame = 1

[node name="Attack2" type="Node2D" parent="Skills"]
position = Vector2(286.628, 564.535)

[node name="Border" type="ColorRect" parent="Skills/Attack2"]
offset_left = -14.0
offset_top = -17.5
offset_right = 14.0
offset_bottom = 17.5

[node name="Divine" type="AnimatedSprite2D" parent="Skills/Attack2"]
position = Vector2(0.709213, -0.581371)
scale = Vector2(0.124407, 0.0894455)
sprite_frames = SubResource("SpriteFrames_mfcji")
autoplay = "default"
frame_progress = 0.260363

[node name="Attack2" type="AnimatedSprite2D" parent="Skills/Attack2"]
scale = Vector2(0.0225119, 0.0391523)
sprite_frames = SubResource("SpriteFrames_3g5ue")
frame = 1

[node name="Turret" type="Node2D" parent="Skills"]
position = Vector2(317.442, 564.535)

[node name="Border" type="ColorRect" parent="Skills/Turret"]
offset_left = -14.0
offset_top = -17.5
offset_right = 14.0
offset_bottom = 17.5

[node name="Divine" type="AnimatedSprite2D" parent="Skills/Turret"]
position = Vector2(1.12781, -0.581464)
scale = Vector2(0.123654, 0.0894454)
sprite_frames = SubResource("SpriteFrames_mfcji")
autoplay = "default"
frame_progress = 0.75954

[node name="Turret" type="AnimatedSprite2D" parent="Skills/Turret"]
scale = Vector2(0.0254483, 0.040404)
sprite_frames = SubResource("SpriteFrames_4n63o")
frame = 1

[node name="Dash" type="Node2D" parent="Skills"]
position = Vector2(347.674, 564.535)

[node name="Border" type="ColorRect" parent="Skills/Dash"]
offset_left = -14.0
offset_top = -17.5
offset_right = 14.0
offset_bottom = 17.5

[node name="Divine" type="AnimatedSprite2D" parent="Skills/Dash"]
position = Vector2(0.83709, -0.436069)
scale = Vector2(0.125, 0.0901443)
sprite_frames = SubResource("SpriteFrames_mfcji")
autoplay = "default"
frame_progress = 0.866052

[node name="Dash" type="AnimatedSprite2D" parent="Skills/Dash"]
scale = Vector2(0.0244695, 0.040404)
sprite_frames = SubResource("SpriteFrames_ecpgq")
frame = 1

[node name="Ultimate" type="Node2D" parent="Skills"]
position = Vector2(379.651, 564.535)

[node name="Border" type="ColorRect" parent="Skills/Ultimate"]
offset_left = -14.0
offset_top = -17.5
offset_right = 14.0
offset_bottom = 17.5

[node name="Divine" type="AnimatedSprite2D" parent="Skills/Ultimate"]
position = Vector2(1.12786, -0.436036)
scale = Vector2(0.126346, 0.0901441)
sprite_frames = SubResource("SpriteFrames_mfcji")
autoplay = "default"
frame_progress = 0.845002

[node name="Ultimate" type="AnimatedSprite2D" parent="Skills/Ultimate"]
scale = Vector2(0.0225119, 0.0393806)
sprite_frames = SubResource("SpriteFrames_k2oq7")
frame = 1

[node name="cd" type="Node2D" parent="Skills/Ultimate"]
position = Vector2(-14, -17.5)

[node name="ColorRect" type="ColorRect" parent="Skills/Ultimate/cd"]
offset_right = 28.0
offset_bottom = 35.0
color = Color(1, 1, 1, 0.678431)

[node name="ColorRect2" type="ColorRect" parent="Skills/Ultimate/cd"]
offset_right = 28.0
offset_bottom = 35.0
color = Color(1, 0, 0, 0.423529)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(549.5, 505.5)
scale = Vector2(0.559816, 0.838737)
texture = ExtResource("41_jfwtf")

[node name="HP" type="Node2D" parent="."]
position = Vector2(-40, -61)

[node name="ColorRect" type="ColorRect" parent="HP"]
offset_left = 70.0
offset_top = 763.0
offset_right = 100.0
offset_bottom = 1033.0
color = Color(0.996078, 0, 0.00392157, 1)

[node name="CurrentHp" type="Label" parent="HP"]
offset_left = -8.0
offset_top = 1031.0
offset_right = 179.0
offset_bottom = 1075.0
text = "2222222"
label_settings = SubResource("LabelSettings_22btt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxHp" type="Label" parent="HP"]
offset_left = -8.0
offset_top = 721.0
offset_right = 179.0
offset_bottom = 765.0
text = "2222222"
label_settings = SubResource("LabelSettings_22btt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterPointHp" type="Node2D" parent="."]
position = Vector2(71.4303, -61.0082)

[node name="ColorRect" type="ColorRect" parent="CenterPointHp"]
offset_left = 965.0
offset_top = 763.0
offset_right = 995.0
offset_bottom = 1033.0
color = Color(0, 0.490196, 0.560784, 1)

[node name="CurrentHp" type="Label" parent="CenterPointHp"]
offset_left = 886.57
offset_top = 1031.0
offset_right = 1073.57
offset_bottom = 1075.0
text = "2222222"
label_settings = SubResource("LabelSettings_22btt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxHp" type="Label" parent="CenterPointHp"]
offset_left = 886.57
offset_top = 721.0
offset_right = 1073.57
offset_bottom = 765.0
text = "2222222"
label_settings = SubResource("LabelSettings_22btt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wood" type="Node2D" parent="."]
position = Vector2(219.622, -61.0082)

[node name="Label" type="Label" parent="Wood"]
offset_left = -187.622
offset_top = 115.008
offset_right = -0.622009
offset_bottom = 159.008
text = "22222"
label_settings = SubResource("LabelSettings_22btt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gold" type="Node2D" parent="."]
position = Vector2(329.622, -61.0082)

[node name="Label" type="Label" parent="Gold"]
offset_left = -387.622
offset_top = 115.008
offset_right = -200.622
offset_bottom = 159.008
text = "22222"
label_settings = SubResource("LabelSettings_22btt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stone" type="Node2D" parent="."]
position = Vector2(439.622, -61.0082)

[node name="Label" type="Label" parent="Stone"]
offset_left = -453.622
offset_top = 115.008
offset_right = -266.622
offset_bottom = 159.008
text = "22222"
label_settings = SubResource("LabelSettings_22btt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dracma" type="Node2D" parent="."]
position = Vector2(595, -61)

[node name="Label2" type="Label" parent="Dracma"]
offset_left = -472.0
offset_top = 115.008
offset_right = -285.0
offset_bottom = 159.008
text = "22222"
label_settings = SubResource("LabelSettings_22btt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DracmaBag" type="Node2D" parent="."]
position = Vector2(614, -61)

[node name="Label2" type="Label" parent="DracmaBag"]
offset_left = -537.0
offset_top = 115.008
offset_right = -350.0
offset_bottom = 159.008
text = "22222"
label_settings = SubResource("LabelSettings_22btt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wave" type="Node2D" parent="."]
position = Vector2(655, -61)

[node name="Label" type="Label" parent="Wave"]
offset_left = 363.0
offset_top = 65.0
offset_right = 428.0
offset_bottom = 91.0
theme_override_fonts/font = ExtResource("2_owy1r")
theme_override_font_sizes/font_size = 15
text = "a"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Wave"]
position = Vector2(397, 133)
sprite_frames = SubResource("SpriteFrames_g7qxd")
frame = 10

[node name="LevelUp" type="Node2D" parent="."]
position = Vector2(-136, 103)

[node name="Label" type="Label" parent="LevelUp"]
offset_left = 573.0
offset_top = 787.0
offset_right = 614.0
offset_bottom = 810.0
theme_override_fonts/font = ExtResource("2_owy1r")
theme_override_font_sizes/font_size = 11
text = "Level: 99"

[node name="ColorRect" type="ColorRect" parent="LevelUp"]
offset_left = 569.0
offset_top = 805.0
offset_right = 797.0
offset_bottom = 826.0
color = Color(0.517647, 0.470588, 0.00784314, 1)

[node name="Label2" type="Label" parent="LevelUp"]
offset_left = 700.0
offset_top = 803.0
offset_right = 797.0
offset_bottom = 832.0
theme_override_fonts/font = ExtResource("2_owy1r")
theme_override_font_sizes/font_size = 11
text = "0/100"
horizontal_alignment = 2
vertical_alignment = 1
